--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x-nodejs-ts-koa",
   "version": "0.1.0",
-  "description": "x-template for nodejs/ts/koa project",
+  "description": "nodejs/ts/koa project",
   "private": true
 }
