--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "nodemon",
     "start:debug": "node --inspect-brk -r ts-node/register src/index.ts",
-    "prebuild": "rm -rf dist",
+    "prebuild": "rimraf dist # rm -rf dist",
     "build": "tsc",
     "prepare": "npm run build",
     "docker:build": "npm run build && docker build -t arzyu/beambox-server .",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^18.8.3",
     "nodemon": "^1.19.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
