--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "docker:clean": "docker container rm -f $(docker ps -aqf \"ancestor=$npm_package_name\") && docker image rm $npm_package_name"
   },
   "dependencies": {
-    "koa": "^2.13.4"
+    "@koa/router": "^12.0.0",
+    "koa": "^2.13.4",
+    "koa-logger": "^3.2.1"
   },
   "devDependencies": {
     "@types/koa": "^2.13.5",
+    "@types/koa__router": "^12.0.0",
+    "@types/koa-logger": "^3.1.2",
     "@types/node": "^18.8.3",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
